Add bucket explorer and split console from bucket list
